<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authenticate.LoginFragment">


    <ScrollView
        android:id="@+id/login_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/register_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="144dp"
                    android:layout_marginLeft="144dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="144dp"
                    android:layout_marginRight="144dp"
                    android:text="@string/create_account"
                    android:textColor="#3D5AFE"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_button" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="162dp"
                    android:layout_marginLeft="162dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="162dp"
                    android:layout_marginRight="162dp"
                    android:background="@drawable/blue_rect_button"
                    android:backgroundTint="@color/maxBlue"
                    android:text="@string/login_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pwd_edit_text" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="123dp"
                    android:layout_marginLeft="123dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="123dp"
                    android:layout_marginRight="123dp"
                    android:text="@string/app_name"
                    android:textColor="@android:color/black"
                    android:textSize="36sp"
                    android:typeface="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <EditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:autofillHints=""
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <EditText
                    android:id="@+id/pwd_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:autofillHints=""
                    android:hint="@string/pwd_hint"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="285dp"
                    android:layout_height="204dp"
                    android:layout_marginStart="64dp"
                    android:layout_marginLeft="64dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="63dp"
                    android:layout_marginRight="63dp"
                    android:contentDescription="@string/gossamer_logo"
                    android:src="@mipmap/app_image_gossamer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>